<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/backstyle1" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/backstyle1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="#0047AB"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24dp"
            style="@style/Text3" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body_text"
        android:textColor="#0047AB"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/insertdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="40dp"
        android:layout_weight="0.60"
        android:gravity="top"
        android:scrollbars="vertical"
        android:textSize="24dp" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save"
            style="@style/ButtonText2"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="5dp"
            android:background="@drawable/btnred"
            android:text="@string/save"
            android:onClick="editNote" />

        <Button
            android:id="@+id/cut"
            style="@style/ButtonText2"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="5dp"
            android:background="@drawable/btnred"
            android:text="@string/cut" />

        <Button
            android:id="@+id/copy"
            style="@style/ButtonText2"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/btnred"
            android:text="@string/copy" />

        <Button
            android:id="@+id/paste"
            style="@style/ButtonText2"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/btnred"
            android:text="@string/paste" />
    </LinearLayout>

</LinearLayout>